--- a/ChatApp/vercel.json
+++ b/ChatApp/vercel.json
@@ -1,14 +1,9 @@
 {
-  "builds": [
-    {
-      "src": "vite.config.js",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
   "routes": [
+    {
+      "src": "^/static/(.*)",
+      "dest": "/static/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
