--- a/ChatApp/vercel.json
+++ b/ChatApp/vercel.json
@@ -1,9 +1,14 @@
 {
-  "routes": [
+  "builds": [
     {
-      "src": "^/static/(.*)",
-      "dest": "/static/$1"
-    },
+      "src": "vite.config.js",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
     {
       "src": "/(.*)",
       "dest": "/index.html"
