--- a/ChatApp/.env
+++ b/ChatApp/.env
@@ -1,2 +1,2 @@
 REACT_APP_CLOUDINARY_CLOUD_NAME = chatappcloudinary
-VITE_BACKEND_URL = wss://chat-app-backend-beta-smoky.vercel.app
+VITE_BACKEND_URL = https://chat-app-backend-beta-smoky.vercel.app
